src/Externals/swmm/outputapi/outputAPI.h

#define MAXFNAME 259
#define INT4  int
/*------------------- Error Messages --------------------*/
#define ERR411 "Input Error 411: no memory allocated for results."
#define ERR412 "Input Error 412: no results; binary file hasn't been opened."
#define ERR421 "Input Error 421: invalid parameter code."
#define ERR434 "File Error  434: unable to open binary output file."
#define ERR435 "File Error  435: run terminated; no results in binary file."
#define ERR441 "Error 441: need to call SMR_open before calling this function"
typedef struct SMOutputAPI SMOutputAPI; // opaque pointer
typedef enum {
	flow_rate_link,      	// (flow units),
	flow_depth,     		// (ft or m),
	flow_velocity,  		// (ft/s or m/s),
	flow_volume,			// (ft3 or m3),
	capacity,       		// (fraction of conduit filled),
	pollutant_conc_link  	// first pollutant,

} SMO_linkAttribute;
typedef enum {
	air_temp,              	// (deg. F or deg. C),
	rainfall_system,        // (in/hr or mm/hr),
	snow_depth_system,      // (in or mm),
	evap_infil_loss,	  	// (in/hr or mm/hr),
	runoff_flow,           	// (flow units),
	dry_weather_inflow,    	// (flow units),
	groundwater_inflow,    	// (flow units),
	RDII_inflow,           	// (flow units),
	direct_inflow,         	// user defined (flow units),
	total_lateral_inflow,  	// (sum of variables 4 to 8) //(flow units),
	flood_losses,       	// (flow units),
	outfall_flows,         	// (flow units),
	volume_stored,         	// (ft3 or m3),
	evap_rate             	// (in/day or mm/day),
	//p_evap_rate		    // (in/day or mm/day)
} SMO_systemAttribute;
struct IDentry {
	char* IDname;
	struct IDentry* nextID;
};
DLLEXPORT int SMR_open(const char* path, SMOutputAPI** smoapi);
DLLEXPORT int SMO_getLinkAttribute(SMOutputAPI* smoapi, int timeIndex,
	SMO_linkAttribute attr, float* outValueArray);
DLLEXPORT int SMO_getSystemAttribute(SMOutputAPI* smoapi, int timeIndex,
	SMO_systemAttribute attr, float* outValueArray);
DLLEXPORT int SMO_getSubcatchResult(SMOutputAPI* smoapi, int timeIndex, int subcatchIndex,
	float* outValueArray);
DLLEXPORT int SMO_getNodeResult(SMOutputAPI* smoapi, int timeIndex, int nodeIndex,
	float* outValueArray);
DLLEXPORT int SMO_getLinkResult(SMOutputAPI* smoapi, int timeIndex, int linkIndex,
	float* outValueArray);
DLLEXPORT int SMO_getSystemResult(SMOutputAPI* smoapi, int timeIndex, float* outValueArray);
DLLEXPORT void SMO_free(float *array);
DLLEXPORT void SMO_freeTimeList(double *array);
DLLEXPORT void SMO_freeIDList(struct IDentry* head);
DLLEXPORT int SMO_close(SMOutputAPI* smoapi);
DLLEXPORT int SMO_errMessage(int errcode, char* errmsg, int n);