src/Externals/swmm/outputapi/outputapi.py


# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 176
if hasattr(_libs['outputapi'], 'SMO_getLinkAttribute'):
    SMO_getLinkAttribute = _libs['outputapi'].SMO_getLinkAttribute
    SMO_getLinkAttribute.argtypes = [POINTER(SMOutputAPI), c_int, SMO_linkAttribute, POINTER(c_float)]
    SMO_getLinkAttribute.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 178
if hasattr(_libs['outputapi'], 'SMO_getSystemAttribute'):
    SMO_getSystemAttribute = _libs['outputapi'].SMO_getSystemAttribute
    SMO_getSystemAttribute.argtypes = [POINTER(SMOutputAPI), c_int, SMO_systemAttribute, POINTER(c_float)]
    SMO_getSystemAttribute.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 182
if hasattr(_libs['outputapi'], 'SMO_getSubcatchResult'):
    SMO_getSubcatchResult = _libs['outputapi'].SMO_getSubcatchResult
    SMO_getSubcatchResult.argtypes = [POINTER(SMOutputAPI), c_int, c_int, POINTER(c_float)]
    SMO_getSubcatchResult.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 184
if hasattr(_libs['outputapi'], 'SMO_getNodeResult'):
    SMO_getNodeResult = _libs['outputapi'].SMO_getNodeResult
    SMO_getNodeResult.argtypes = [POINTER(SMOutputAPI), c_int, c_int, POINTER(c_float)]
    SMO_getNodeResult.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 186
if hasattr(_libs['outputapi'], 'SMO_getLinkResult'):
    SMO_getLinkResult = _libs['outputapi'].SMO_getLinkResult
    SMO_getLinkResult.argtypes = [POINTER(SMOutputAPI), c_int, c_int, POINTER(c_float)]
    SMO_getLinkResult.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 188
if hasattr(_libs['outputapi'], 'SMO_getSystemResult'):
    SMO_getSystemResult = _libs['outputapi'].SMO_getSystemResult
    SMO_getSystemResult.argtypes = [POINTER(SMOutputAPI), c_int, POINTER(c_float)]
    SMO_getSystemResult.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 191
if hasattr(_libs['outputapi'], 'SMO_free'):
    SMO_free = _libs['outputapi'].SMO_free
    SMO_free.argtypes = [POINTER(c_float)]
    SMO_free.restype = None

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 192
if hasattr(_libs['outputapi'], 'SMO_freeTimeList'):
    SMO_freeTimeList = _libs['outputapi'].SMO_freeTimeList
    SMO_freeTimeList.argtypes = [POINTER(c_double)]
    SMO_freeTimeList.restype = None

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 193
if hasattr(_libs['outputapi'], 'SMO_freeIDList'):
    SMO_freeIDList = _libs['outputapi'].SMO_freeIDList
    SMO_freeIDList.argtypes = [POINTER(struct_IDentry)]
    SMO_freeIDList.restype = None

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 196
if hasattr(_libs['outputapi'], 'SMO_close'):
    SMO_close = _libs['outputapi'].SMO_close
    SMO_close.argtypes = [POINTER(SMOutputAPI)]
    SMO_close.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 197
if hasattr(_libs['outputapi'], 'SMO_errMessage'):
    SMO_errMessage = _libs['outputapi'].SMO_errMessage
    SMO_errMessage.argtypes = [c_int, String, c_int]
    SMO_errMessage.restype = c_int

# <command-line>: 1
try:
    _REENTRANT = 1
except:
    pass

__const = c_int # <command-line>: 5

# <command-line>: 8
try:
    CTYPESGEN = 1
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 27
try:
    MAXFNAME = 259
except:
    pass

# c:\\mingw\\lib64\\gcc\\x86_64-w64-mingw32\\4.8.3\\include\\stdbool.h: 34
try:
    true = 1
except:
    pass

# c:\\mingw\\lib64\\gcc\\x86_64-w64-mingw32\\4.8.3\\include\\stdbool.h: 35
try:
    false = 0
except:
    pass

# c:\\mingw\\lib64\\gcc\\x86_64-w64-mingw32\\4.8.3\\include\\stdbool.h: 48
try:
    __bool_true_false_are_defined = 1
except:
    pass

INT4 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 31

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 34
try:
    ERR411 = 'Input Error 411: no memory allocated for results.'
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 35
try:
    ERR412 = "Input Error 412: no results; binary file hasn't been opened."
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 36
try:
    ERR421 = 'Input Error 421: invalid parameter code.'
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 37
try:
    ERR434 = 'File Error  434: unable to open binary output file.'
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 38
try:
    ERR435 = 'File Error  435: run terminated; no results in binary file.'
except:
    pass

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 39
try:
    ERR441 = 'Error 441: need to call SMR_open before calling this function'
except:
    pass

SMOutputAPI = struct_SMOutputAPI # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 41

IDentry = struct_IDentry # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 131

# No inserted files

